# bitbots_kick_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
bitbots_kick_engine/: CMakeLists.txt  package.xml
bitbots_kick_engine/cfg/: bitbots_quintic_walk_params.cfg  kick_engine_params.cfg  kick_params.cfg  kick_preparation_positions.cfg
bitbots_kick_engine/include/: Footstep.hpp  KickEngine.hpp  KickEngineBase.hpp  KickEngineDebugService.hpp  KickEngineNode.hpp  KickEngineNodeService.hpp  KickEngineParameter.hpp  KickEngineService.hpp
bitbots_kick_engine/src/: Footstep.cpp  KickEngine.cpp  KickEngineDebugService.cpp  KickEngineNode.cpp  KickEngineNodeService.cpp
bitbots_spline/: CMakeLists.txt  package.xml
bitbots_spline/include/handle/: pose_handle.h  position_handle.h
bitbots_spline/include/spline/: Beziercurve.hpp  CubicSpline.hpp  Curve.hpp  LinearSpline.hpp  SmoothSpline.hpp  Spline.hpp  beziercurve.h  beziercurve.hpp  cubic_spline.h  cubic_spline.hpp  curve.h  linear_spline.h  linear_spline.hpp  smooth_spline.h  smooth_spline.hpp  spline.h  spline.hpp
bitbots_spline/include/utils/: NewtonBinomial.hpp  SplineContainer.hpp  SplineContainerFactory.hpp  TrajectoryService.hpp  abstract_visualizer.h  newton_binomial.h  newton_binomial.hpp  polynom.h  pose_spline.h  spline_container.h  spline_container.hpp  spline_container_factory.h  spline_container_factory.hpp  trajectory_service.h  trajectory_service.hpp
bitbots_spline/include/visualisation/: VisualSplinesMaterial.hpp  VisualSplinesService.hpp  visual_splines_material.h  visual_splines_material.hpp  visual_splines_service.h  visual_splines_service.hpp
bitbots_spline/src/handle/: pose_handle.cpp  position_handle.cpp
bitbots_spline/src/spline/: Beziercurve.cpp  CubicSpline.cpp  Curve.cpp  LinearSpline.cpp  SmoothSpline.cpp  Spline.cpp  beziercurve.cpp  cubic_spline.cpp  curve.cpp  linear_spline.cpp  smooth_spline.cpp  spline.cpp
bitbots_spline/src/utils/: Combination.cpp  NewtonBinomial.cpp  Polynom.cpp  SplineContainerFactory.cpp  TrajectoryService.cpp  combination.cpp  newton_binomial.cpp  polynom.cpp  pose_spline.cpp  spline_container_factory.cpp  trajectory_service.cpp
bitbots_spline/src/visualisation/: VisualSplinesMaterial.cpp  VisualSplinesNode.cpp  VisualSplinesService.cpp  visual_splines_material.cpp  visual_splines_node.cpp  visual_splines_service.cpp
bitbots_splines_extension/: CMakeLists.txt  package.xml
bitbots_splines_extension/include/abstract/: abstract_visualizer.h
bitbots_splines_extension/include/handle/: pose_handle.h  position_handle.h
bitbots_splines_extension/include/spline/: beziercurve.h  cubic_spline.h  curve.h  linear_spline.h  quintic_spline.h  smooth_spline.h  spline_base.h
bitbots_splines_extension/include/visualisation/: visual_splines_material.h  visual_splines_service.h
bitbots_splines_extension/src/handle/: pose_handle.cpp  position_handle.cpp
bitbots_splines_extension/src/spline/: beziercurve.cpp  cubic_spline.cpp  curve.cpp  linear_spline.cpp  quintic_spline.cpp  smooth_spline.cpp  spline.cpp  spline_base.cpp
bitbots_splines_extension/src/visualisation/: visual_splines_material.cpp  visual_splines_node.cpp  visual_splines_service.cpp
bitbots_throw_engine/: CMakeLists.txt  package.xml  setup.py
bitbots_throw_engine/cfg/: throw_engine_params.cfg  throw_params.cfg
bitbots_throw_engine/config/: throw.rviz
bitbots_throw_engine/include/engine/: throw_engine.h
bitbots_throw_engine/include/parameter/: struct3d.h  throw_engine_parameter.h  throw_engine_parameter_builder.h  throw_node_parameter.h  throw_node_parameter_builder.h  throw_parameter.h  throw_parameter_builder.h  throw_type_parameter.h  throw_type_parameter_builder.h
bitbots_throw_engine/include/ros_interface/: ros_joint_and_topic_names.h  throw_node.h  throw_ros.h  throw_visualizer.h
bitbots_throw_engine/include/ros_interface/publisher/: controler_command_publisher.h  debug_publisher.h  odometry_publisher.h  ros_publisher_facade.h  support_publisher.h  system_publisher.h
bitbots_throw_engine/include/throws/: throw_factory.h
bitbots_throw_engine/include/throws/throw_curves/: beziercurve_throw.h  cubic_spline_throw.h  linear_spline_throw.h  smooth_spline_throw.h  testing_movement.h  testing_throw.h  throw_curve.h  throw_material.h  throw_movement.h  throw_movement_base.h  throw_movement_position_only.h  throw_service.h
bitbots_throw_engine/include/utility/: throw_ik.h  throw_logger.h  throw_math.h  throw_stabilizer.h  throw_stabilizer_and_ik_factory.h  throw_struct.h  throw_utilities.h
bitbots_throw_engine/launch/: simulation.launch  throw_engine.launch  vis.launch
bitbots_throw_engine/msg/: throw_action.msg  throw_debug.msg  throw_engine_debug.msg
bitbots_throw_engine/scripts/: catkin_build_and_rosrun.sh  generate_throw_animation.py  simulation_headless.py  simulation_with_gui.py
bitbots_throw_engine/simulation/: ball.urdf  simulation.py
bitbots_throw_engine/src/: simulation.py
bitbots_throw_engine/src/engine/: throw_engine.cpp
bitbots_throw_engine/src/ros_interface/: throw_node.cpp  throw_ros.cpp  throw_visualizer.cpp
bitbots_throw_engine/src/ros_interface/publisher/: controler_command_publisher.cpp  debug_publisher.cpp  odometry_publisher.cpp  ros_publisher_facade.cpp  support_publisher.cpp
bitbots_throw_engine/src/throws/: throw_factory.cpp
bitbots_throw_engine/src/throws/throw_curves/: beziercurve_throw.cpp  cubic_spline_throw.cpp  linear_spline_throw.cpp  smooth_spline_throw.cpp  testing_movement.cpp  testing_throw.cpp  throw_curve.cpp  throw_material.cpp  throw_movement.cpp  throw_movement_base.cpp  throw_movement_position_only.cpp  throw_service.cpp
bitbots_throw_engine/src/utility/: throw_ik.cpp  throw_stabilizer.cpp  throw_stabilizer_and_ik_factory.cpp
include/Utils/: SplineContainer.hpp  TrajectoryService.hpp  VisualSplinesMaterial.hpp  VisualSplinesNode.hpp  VisualSplinesService.hpp
include/bitbots_kick_engine/: KickEngineBase.hpp  KickEngineNode.hpp  KickEngineService.hpp  SplineKickEngine.hpp
include/bitbots_spline/: LinearSpline.hpp
(+42 files in other folders)
