<?xml version="1.0"?>
<package format="2">
  <name>bitbots_splines_extension</name>
  <version>0.0.0</version>
  <description>The bitbots_spline package</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <author>Rhoban FC</author>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>bitbots_splines</depend>

  <export>
     <bitbots_documentation>
      <status>TODO</status>
      <language>c++</language>
    </bitbots_documentation>
  </export>
</package>
