<?xml version="1.0"?>
<package format="2">
  <name>bitbots_throw</name>
  <version>0.0.0</version>
  <description>The bitbots_throw package</description>
  
  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <maintainer email="5reichar@informatik.uni-hamburg.de">W. Adrian Reichardt</maintainer>

  <author email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>
  <author email="5reichar@informatik.uni-hamburg.de">W. Adrian Reichardt</author>
  <author>Rhoban FC</author>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_runtime</depend>

  <depend>tf2</depend>
  <depend>bio_ik</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>humanoid_league_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <depend>bitbots_splines</depend>
  <depend>bitbots_splines_extension</depend>
  <depend>bitbots_msgs</depend>

  <export>
    <bitbots_documentation>
      <status>simulation testing</status>
      <language>c++</language>
    </bitbots_documentation>
  </export>
</package>
